// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`testing toSetRoleMentionable operation should fail due to no role mentionable was not updated 1`] = `
Object {
  "message": "    
    expected: mentionable to be false
    received: role mentionable was not updated
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should fail due to undefined roleIdentifier 1`] = `
Object {
  "message": "    
    expected: data to identifier the role (id or name)
    received: null
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return a not passed test due expected name did not match to received 1`] = `
Object {
  "message": "    
    expected: mentionable to be true
    received: false
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return a not passed test due to mentionable should not change (isNot true) 1`] = `
Object {
  "message": "    
    expected: mentionable to not be false
    received: false
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return false due to invalid mentionable parameter (object) 1`] = `
Object {
  "message": "    
    expected: mentionable parameter to be of boolean type
    received: object
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return false due to invalid mentionable parameter (undefined) 1`] = `
Object {
  "message": "    
    expected: mentionable option to be true or false
    received: undefined
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return false due to not found role 1`] = `
Object {
  "message": "    
    expected: role with id 123
    received: null
",
  "pass": false,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return true due to isNot true and no role change 1`] = `
Object {
  "pass": true,
  "testName": "toSetRoleMentionable",
}
`;

exports[`testing toSetRoleMentionable operation should return true due to role changed the mentionable (isNot false) 1`] = `
Object {
  "pass": true,
  "testName": "toSetRoleMentionable",
}
`;
